[package]
name = "aptos-vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
rand = "0.8.4"
bcs = "0.1.5"
aptos-vm = { version = "0.1.0",git = "https://github.com/aptos-labs/aptos-core" }
aptos-storage-interface = { version = "0.1.0",git = "https://github.com/aptos-labs/aptos-core" }
