[package]
name = "subnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avalanche-types = { version = "0.0.395", features = ["subnet", "codec_base64"] }
tokio = { version = "1.25.0", features = ["fs", "rt-multi-thread"] }
tonic = { version = "0.8.3", features = ["gzip"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93" # https://github.com/serde-rs/json/releases
serde_with = { version = "2.2.0", features = ["hex"] }
log = "0.4.17"
dirs = "5.0.1"
hex = "0.4.3"
bytes = "1.4.0"
env_logger = "0.10.0"
base64 = { version = "0.21.0" }
chrono = "0.4.23"
derivative = "2.2.0"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0" }
jsonrpc-derive = "18.0.0"

anyhow = { workspace = true }
aptos-config = { workspace = true }
aptos-consensus-types = { workspace = true }
aptos-mempool = { workspace = true }
aptos-runtimes = { workspace = true }
aptos-crypto = { workspace = true }
aptos-db = { workspace = true, features = ["fuzzing"] }
aptos-executor = { workspace = true }
aptos-logger = { workspace = true }
aptos-api-types = { workspace = true }
aptos-api = { workspace = true }
aptos-executor-types = { workspace = true }
aptos-genesis = { workspace = true }
aptos-sdk = { workspace = true }
aptos-state-view = { workspace = true }
aptos-storage-interface = { workspace = true }
aptos-temppath = { workspace = true }
aptos-types = { workspace = true }
aptos-vm = { workspace = true }
futures = { workspace = true }
aptos-vm-genesis = { workspace = true }
rand = { workspace = true }
bcs = { workspace = true }